--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') %>
 
 <div class="overlay">
-  <form class="login-form" action="/login" method="POST">
+  <form class="m-form login-form" action="/login" method="POST">
     <div class="con">
       <header class="head-form">
         <img id="logo" src="craftant.png" alt="craftant logo">
