--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,7 +2,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 <div class="overlay">
-  <form class="register-form" action="/register" method="POST">
+  <form class="m-form register-form" action="/register" method="POST">
     <div class="con">
       <header class="head-form">
         <img id="logo" src="craftant.png" alt="craftant logo">
