--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,34 @@
+/* header */
+
+
+.navbar {
+  padding: 0 0 2.5rem;
+}
+
+.navbar-brand {
+  font-family: 'Della Respira', serif;
+  font-size: 1.5rem;
+}
+
+.nav-item {
+  padding: 0 18px;
+}
+
+.nav-link {
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+.container-fluid {
+  padding: 2% 8%;
+}
+
+.search-form {
+  margin-left: 32%;
+}
+
+
+
 /* home route */
 .expanding-button {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -96,7 +127,7 @@ a:visited {
 }
 
 body {
-background-color: #ff8769;
+background-color: white;
 
     font-family: 'Vibur', cursive;
     font-family: 'Abel', sans-serif;
@@ -106,7 +137,7 @@ background-color: #ff8769;
 
 
 /* form */
-form {
+.m-form {
     width: 450px;
     min-height: 500px;
     height: auto;
@@ -238,6 +269,45 @@ button:hover {
         transform: translateY(5px);
     }
 }
+/* reg page 2 form */
+
+.reg2-form {
+  width: 1300px;
+  min-height: 800px;
+  height: auto;
+  border-radius: 5px;
+  margin: 2% auto;
+  box-shadow: 0 9px 50px hsla(20, 67%, 75%, 0.31);
+  padding: 2%;
+  background-image: linear-gradient(-225deg, #E3FDF5 50%, #FFE6FA 50%);
+  display: table;
+}
+
+.reg-set {
+  position: absolute;
+  align-items: center;
+  display: table;
+  top: 440px;
+}
+
+.reg-table {
+  width: 100%;
+  table-layout: fixed;
+}
+
+.other-inputs {
+  position: relative;
+  top: -30px;
+}
+
+#last-name {
+  position: absolute;
+  right: 160px;
+}
+
+
+
+
 
 /* buyer seller toggle button style */
 
